# XCompilingMobile

./: README.md
cmake_example/: .gitignore  CMakeLists.txt  build.sh
cmake_example/include/: example.hpp
cmake_example/src/: CMakeLists.txt  example.cpp  main.cpp
cmake_example/tests/: CMakeLists.txt  test_main.cpp
hmos/AppScope/resources/base/element/: string.json
hmos/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
hmos/entry/src/main/cpp/types/libentry/: Index.d.ts
hmos/entry/src/main/ets/pages/: Index.ets
